--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Proiect_Tehnologii_Mobile</string>
+    <string name="app_name">Spotify Clone</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="stringSongTitle">Title</string>
+    <string name="StringArtist">Artist</string>
+    <string name="StringSongType">Genre</string>
+    <string name="StringSongLink">Youtube Link</string>
+    <string name="StringAddSong">Add Song</string>
 </resources>
