--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,29 @@
 <resources>
     <string name="app_name">Spotify Clone</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="openDrawer">open_drawer</string>
+    <string name="closeDrawer">close_drawer</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <!-- Toolbar titles when navigation menu item is selected -->
+    <string-array name="nav_item_activity_titles">
+        <item>Home</item>
+        <item>All Songs</item>
+        <item>Playlists</item>
+        <item>Add Song</item>
+        <item>Settings</item>
+    </string-array>
+
+    <!--Hints for adding songs-->
     <string name="stringSongTitle">Title</string>
     <string name="StringArtist">Artist</string>
     <string name="StringSongType">Genre</string>
     <string name="StringSongLink">Youtube Link</string>
     <string name="StringAddSong">Add Song</string>
+
+    <!--String for home buttons-->
+    <string name="string_all_songs">All Songs</string>
+    <string name="string_playlists">Playlists</string>
+    <string name="nav_settings">Settings</string>
 </resources>
