--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="string_all_songs">All Songs</string>
     <string name="string_playlists">Playlists</string>
     <string name="nav_settings">Settings</string>
+    <string name="string_delete_all">Delete all songs from database</string>
 </resources>
