--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="string_playlists">Playlists</string>
     <string name="nav_settings">Settings</string>
     <string name="string_delete_all">Delete all songs from database</string>
+    <string name="default_title">Default Title</string>
+    <string name="default_artist">Default Artist</string>
+    <string name="default_genre">Default Genre</string>
+    <string name="darkmode_lightmode">DarkMode/LightMode</string>
 </resources>
