Made it possible to view existing playlists and working on making adding playlists and adding songs to them functional
Made it possible to add songs to playlists, delete playlists, modify the playlist's name and song is automatically added to a playlist based on the artist's name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,8 @@
     <string name="stringAddToPlaylist">Add to Playlist</string>
     <string name="stringDeleteSong">Delete Song</string>
     <string name="change_details">Change Details</string>
+    <string name="create_new_playlist">Create new playlist</string>
+    <string name="playlist_name">Playlist name</string>
+    <string name="change_name">Change name</string>
+    <string name="deleteplaylist">deletePlaylist</string>
 </resources>
